--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 inotify = "0.9.5"
+mongodb = { version = "2.0.1", default-features = false, features = ["sync"] }
 serde = "1.0.130"
 serde_derive = "1.0.130"
 serde_json = "1.0.68"
